// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileView snapshots > renders a fully active profile (streams + splits + gives) > profile-fully-active 1`] = `
<div>
  <main
    class="max-w-5xl mx-auto px-4 sm:px-6 pt-24 sm:pt-28 pb-20"
  >
    <div
      class="card p-6 sm:p-8 mb-8 space-y-6"
    >
      <div
        class="flex flex-col sm:flex-row sm:items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="w-14 h-14 rounded-2xl bg-gradient-to-tr from-violet-600 to-indigo-500 flex items-center justify-center text-2xl font-bold text-white shadow-lg shadow-violet-500/20"
          >
            GP
          </div>
          <div>
            <div
              class="flex items-center gap-2.5 flex-wrap"
            >
              <h1
                class="text-xl sm:text-2xl font-bold text-white"
              >
                GPROFI...PRFL
              </h1>
              <span
                class="text-xs px-2.5 py-0.5 rounded-full border border-white/10 bg-white/5 text-zinc-400 font-mono"
              >
                testnet
              </span>
            </div>
            <div
              class="mt-1"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                  >
                    GPROFI...PRFL
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="relative inline-flex items-center"
          >
            <button
              aria-label="Copy Profile Link"
              class="inline-flex items-center gap-1.5 text-xs font-medium px-3 py-1.5 min-h-[44px] rounded-lg border transition-all border-white/10 bg-white/5 text-zinc-300 hover:border-white/20 hover:text-white hover:bg-white/10 "
              title="Copy Profile Link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4 shrink-0"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span>
                Copy Profile Link
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 pt-4 border-t border-white/5"
      >
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Outgoing
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            10.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as grantor
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Inbound
          </p>
          <p
            class="text-lg font-bold text-emerald-400"
          >
            5.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as beneficiary
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Active Streams
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            2
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            currently vesting
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex items-center justify-between gap-4 flex-wrap mb-6"
    >
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-violet-500/60 bg-violet-500/10 text-violet-300"
        >
          All Streams (2)
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Outgoing
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Incoming
        </button>
      </div>
      <div
        class="w-full sm:w-72"
      >
        <div
          class="relative flex flex-col sm:flex-row items-stretch sm:items-center gap-3 w-full "
        >
          <div
            class="relative flex-1"
          >
            <label
              class="sr-only"
              for="stream-search-filter"
            >
              Search and filter streams
            </label>
            <div
              class="absolute inset-y-0 left-0 pl-3.5 flex items-center pointer-events-none text-zinc-400"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <input
              aria-label="Filter streams"
              autocomplete="off"
              class="w-full pl-10 pr-10 py-2.5 bg-white/5 border border-white/10 rounded-xl text-sm text-white placeholder-zinc-500 focus:outline-none focus:border-violet-500 focus:ring-1 focus:ring-violet-500 transition-colors"
              id="stream-search-filter"
              placeholder="Filter streams by address or token…"
              role="searchbox"
              spellcheck="false"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="card p-5 flex flex-col gap-3"
        data-tour="schedule-card"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <div
              class="flex items-center gap-2"
            >
              <a
                class="text-sm font-semibold text-white hover:text-violet-300 transition-colors"
                href="/app/schedule/1"
              >
                Schedule #
                1
              </a>
              <button
                aria-label="Copy schedule 1"
                class="inline-flex items-center gap-1.5 rounded-md border px-2.5 py-1 text-[11px] font-medium transition-colors border-white/10 bg-white/5 text-zinc-400 hover:border-white/20 hover:text-white "
                title="Copy schedule 1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="13"
                    rx="2"
                    width="13"
                    x="9"
                    y="9"
                  />
                  <path
                    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                  />
                </svg>
                <span>
                  Copy
                </span>
              </button>
            </div>
            <div
              class="flex items-center gap-1.5 mt-0.5 flex-wrap"
            >
              <span
                class="text-[10px] font-semibold px-1.5 py-0.5 rounded bg-blue-500/10 text-blue-400 border border-blue-500/20"
              >
                Linear
              </span>
              <span
                class="text-[10px] font-medium px-1.5 py-0.5 rounded bg-zinc-700/40 text-zinc-400 border border-zinc-700/60"
              >
                revocable
              </span>
            </div>
          </div>
          <span
            class="text-xs font-medium px-2 py-0.5 rounded-full bg-violet-500/10 text-violet-400"
          >
            Vesting
          </span>
        </div>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 gap-2 text-xs text-zinc-400"
        >
          <div>
            <span
              class="text-zinc-600"
            >
              Grantor
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                >
                  GPRO...RFL
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Beneficiary
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                >
                  GCOU...PTY
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Total
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              10.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $1.20
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Claimed
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              0.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.00
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Starts
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2025
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Ends
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2026
            </p>
          </div>
        </div>
        <div>
          <div
            class="flex justify-between items-center text-xs text-zinc-500 mb-1.5"
          >
            <div
              class="flex items-center gap-3"
            >
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500"
                />
                Vested 
                8
                %
              </span>
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-emerald-500"
                />
                Claimed 
                0
                %
              </span>
            </div>
            <span
              class="text-zinc-600"
            >
              10.0
               
              XLM
            </span>
          </div>
          <div
            aria-label="Vesting progress: 8% vested, 0% claimed"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="8"
            class="relative h-2.5 rounded-full bg-white/5 overflow-hidden"
            role="progressbar"
          >
            <div
              class="absolute inset-y-0 left-0 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500 transition-all duration-700"
              style="width: 8%;"
            />
          </div>
        </div>
        <div>
          <button
            class="text-xs text-zinc-500 hover:text-zinc-300 transition-colors"
          >
            Show chart ▼
          </button>
        </div>
        <div
          class="flex flex-col sm:flex-row gap-2 mt-1"
        />
      </div>
      <div
        class="card p-5 flex flex-col gap-3"
        data-tour="schedule-card"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <div
              class="flex items-center gap-2"
            >
              <a
                class="text-sm font-semibold text-white hover:text-violet-300 transition-colors"
                href="/app/schedule/2"
              >
                Schedule #
                2
              </a>
              <button
                aria-label="Copy schedule 2"
                class="inline-flex items-center gap-1.5 rounded-md border px-2.5 py-1 text-[11px] font-medium transition-colors border-white/10 bg-white/5 text-zinc-400 hover:border-white/20 hover:text-white "
                title="Copy schedule 2"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="13"
                    rx="2"
                    width="13"
                    x="9"
                    y="9"
                  />
                  <path
                    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                  />
                </svg>
                <span>
                  Copy
                </span>
              </button>
            </div>
            <div
              class="flex items-center gap-1.5 mt-0.5 flex-wrap"
            >
              <span
                class="text-[10px] font-semibold px-1.5 py-0.5 rounded bg-blue-500/10 text-blue-400 border border-blue-500/20"
              >
                Linear
              </span>
              <span
                class="text-[10px] font-medium px-1.5 py-0.5 rounded bg-zinc-700/40 text-zinc-400 border border-zinc-700/60"
              >
                revocable
              </span>
            </div>
          </div>
          <span
            class="text-xs font-medium px-2 py-0.5 rounded-full bg-violet-500/10 text-violet-400"
          >
            Vesting
          </span>
        </div>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 gap-2 text-xs text-zinc-400"
        >
          <div>
            <span
              class="text-zinc-600"
            >
              Grantor
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                >
                  GCOU...PTY
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Beneficiary
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                >
                  GPRO...RFL
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Total
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              5.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.60
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Claimed
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              0.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.00
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Starts
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2025
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Ends
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2026
            </p>
          </div>
        </div>
        <div>
          <div
            class="flex justify-between items-center text-xs text-zinc-500 mb-1.5"
          >
            <div
              class="flex items-center gap-3"
            >
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500"
                />
                Vested 
                8
                %
              </span>
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-emerald-500"
                />
                Claimed 
                0
                %
              </span>
            </div>
            <span
              class="text-zinc-600"
            >
              5.0
               
              XLM
            </span>
          </div>
          <div
            aria-label="Vesting progress: 8% vested, 0% claimed"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="8"
            class="relative h-2.5 rounded-full bg-white/5 overflow-hidden"
            role="progressbar"
          >
            <div
              class="absolute inset-y-0 left-0 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500 transition-all duration-700"
              style="width: 8%;"
            />
          </div>
        </div>
        <div>
          <button
            class="text-xs text-zinc-500 hover:text-zinc-300 transition-colors"
          >
            Show chart ▼
          </button>
        </div>
        <div
          class="flex flex-col sm:flex-row gap-2 mt-1"
        />
      </div>
    </div>
    <div
      class="mt-10 space-y-6"
    >
      <section
        class="card p-6"
      >
        <h2
          class="text-lg font-semibold text-white mb-4"
        >
          Splits configuration
        </h2>
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center justify-between gap-4 border-b border-white/5 pb-2 last:border-0 last:pb-0"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GSPLITRECEIVERAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASPLT"
                >
                  GSPLIT...SPLT
                </span>
              </div>
            </div>
            <span
              class="text-sm font-mono text-violet-300"
            >
              60.00
              %
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-4 border-b border-white/5 pb-2 last:border-0 last:pb-0"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                >
                  GCOUNT...CPTY
                </span>
              </div>
            </div>
            <span
              class="text-sm font-mono text-violet-300"
            >
              40.00
              %
            </span>
          </div>
        </div>
      </section>
      <section
        class="card p-6"
      >
        <h2
          class="text-lg font-semibold text-white mb-4"
        >
          Drips activity
        </h2>
        <div
          class="space-y-3"
        >
          <div
            class="flex items-center justify-between gap-4 text-sm"
          >
            <span
              class="text-zinc-400"
            >
              Streaming to 
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                  >
                    GCOU...PTY
                  </span>
                </div>
              </div>
            </span>
            <span
              class="font-mono text-emerald-300"
            >
              0.0001
               
              XLM
              /s
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-4 text-sm border-t border-white/5 pt-3"
          >
            <span
              class="text-zinc-400"
            >
              Gave to
               
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                  >
                    GCOU...PTY
                  </span>
                </div>
              </div>
            </span>
            <span
              class="font-mono text-white"
            >
              25.0
               
              XLM
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-4 text-sm border-t border-white/5 pt-3"
          >
            <span
              class="text-zinc-400"
            >
              Received from
               
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GSPLITRECEIVERAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASPLT"
                  >
                    GSPL...PLT
                  </span>
                </div>
              </div>
            </span>
            <span
              class="font-mono text-white"
            >
              10.0
               
              XLM
            </span>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;

exports[`ProfileView snapshots > renders a profile with incoming streams only > profile-incoming-only 1`] = `
<div>
  <main
    class="max-w-5xl mx-auto px-4 sm:px-6 pt-24 sm:pt-28 pb-20"
  >
    <div
      class="card p-6 sm:p-8 mb-8 space-y-6"
    >
      <div
        class="flex flex-col sm:flex-row sm:items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="w-14 h-14 rounded-2xl bg-gradient-to-tr from-violet-600 to-indigo-500 flex items-center justify-center text-2xl font-bold text-white shadow-lg shadow-violet-500/20"
          >
            GP
          </div>
          <div>
            <div
              class="flex items-center gap-2.5 flex-wrap"
            >
              <h1
                class="text-xl sm:text-2xl font-bold text-white"
              >
                GPROFI...PRFL
              </h1>
              <span
                class="text-xs px-2.5 py-0.5 rounded-full border border-white/10 bg-white/5 text-zinc-400 font-mono"
              >
                testnet
              </span>
            </div>
            <div
              class="mt-1"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                  >
                    GPROFI...PRFL
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="relative inline-flex items-center"
          >
            <button
              aria-label="Copy Profile Link"
              class="inline-flex items-center gap-1.5 text-xs font-medium px-3 py-1.5 min-h-[44px] rounded-lg border transition-all border-white/10 bg-white/5 text-zinc-300 hover:border-white/20 hover:text-white hover:bg-white/10 "
              title="Copy Profile Link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4 shrink-0"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span>
                Copy Profile Link
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 pt-4 border-t border-white/5"
      >
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Outgoing
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            0.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as grantor
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Inbound
          </p>
          <p
            class="text-lg font-bold text-emerald-400"
          >
            5.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as beneficiary
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Active Streams
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            1
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            currently vesting
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex items-center justify-between gap-4 flex-wrap mb-6"
    >
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-violet-500/60 bg-violet-500/10 text-violet-300"
        >
          All Streams (1)
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Outgoing
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Incoming
        </button>
      </div>
      <div
        class="w-full sm:w-72"
      >
        <div
          class="relative flex flex-col sm:flex-row items-stretch sm:items-center gap-3 w-full "
        >
          <div
            class="relative flex-1"
          >
            <label
              class="sr-only"
              for="stream-search-filter"
            >
              Search and filter streams
            </label>
            <div
              class="absolute inset-y-0 left-0 pl-3.5 flex items-center pointer-events-none text-zinc-400"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <input
              aria-label="Filter streams"
              autocomplete="off"
              class="w-full pl-10 pr-10 py-2.5 bg-white/5 border border-white/10 rounded-xl text-sm text-white placeholder-zinc-500 focus:outline-none focus:border-violet-500 focus:ring-1 focus:ring-violet-500 transition-colors"
              id="stream-search-filter"
              placeholder="Filter streams by address or token…"
              role="searchbox"
              spellcheck="false"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="card p-5 flex flex-col gap-3"
        data-tour="schedule-card"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <div
              class="flex items-center gap-2"
            >
              <a
                class="text-sm font-semibold text-white hover:text-violet-300 transition-colors"
                href="/app/schedule/2"
              >
                Schedule #
                2
              </a>
              <button
                aria-label="Copy schedule 2"
                class="inline-flex items-center gap-1.5 rounded-md border px-2.5 py-1 text-[11px] font-medium transition-colors border-white/10 bg-white/5 text-zinc-400 hover:border-white/20 hover:text-white "
                title="Copy schedule 2"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="13"
                    rx="2"
                    width="13"
                    x="9"
                    y="9"
                  />
                  <path
                    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                  />
                </svg>
                <span>
                  Copy
                </span>
              </button>
            </div>
            <div
              class="flex items-center gap-1.5 mt-0.5 flex-wrap"
            >
              <span
                class="text-[10px] font-semibold px-1.5 py-0.5 rounded bg-blue-500/10 text-blue-400 border border-blue-500/20"
              >
                Linear
              </span>
              <span
                class="text-[10px] font-medium px-1.5 py-0.5 rounded bg-zinc-700/40 text-zinc-400 border border-zinc-700/60"
              >
                revocable
              </span>
            </div>
          </div>
          <span
            class="text-xs font-medium px-2 py-0.5 rounded-full bg-violet-500/10 text-violet-400"
          >
            Vesting
          </span>
        </div>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 gap-2 text-xs text-zinc-400"
        >
          <div>
            <span
              class="text-zinc-600"
            >
              Grantor
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                >
                  GCOU...PTY
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Beneficiary
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                >
                  GPRO...RFL
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Total
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              5.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.60
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Claimed
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              0.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.00
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Starts
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2025
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Ends
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2026
            </p>
          </div>
        </div>
        <div>
          <div
            class="flex justify-between items-center text-xs text-zinc-500 mb-1.5"
          >
            <div
              class="flex items-center gap-3"
            >
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500"
                />
                Vested 
                8
                %
              </span>
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-emerald-500"
                />
                Claimed 
                0
                %
              </span>
            </div>
            <span
              class="text-zinc-600"
            >
              5.0
               
              XLM
            </span>
          </div>
          <div
            aria-label="Vesting progress: 8% vested, 0% claimed"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="8"
            class="relative h-2.5 rounded-full bg-white/5 overflow-hidden"
            role="progressbar"
          >
            <div
              class="absolute inset-y-0 left-0 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500 transition-all duration-700"
              style="width: 8%;"
            />
          </div>
        </div>
        <div>
          <button
            class="text-xs text-zinc-500 hover:text-zinc-300 transition-colors"
          >
            Show chart ▼
          </button>
        </div>
        <div
          class="flex flex-col sm:flex-row gap-2 mt-1"
        />
      </div>
    </div>
    <div
      class="mt-10 space-y-6"
    >
      <section
        class="card p-6"
      >
        <h2
          class="text-lg font-semibold text-white mb-4"
        >
          Splits configuration
        </h2>
        <p
          class="text-sm text-zinc-500"
        >
          No splits configured.
        </p>
      </section>
    </div>
  </main>
</div>
`;

exports[`ProfileView snapshots > renders a profile with outgoing streams only > profile-outgoing-only 1`] = `
<div>
  <main
    class="max-w-5xl mx-auto px-4 sm:px-6 pt-24 sm:pt-28 pb-20"
  >
    <div
      class="card p-6 sm:p-8 mb-8 space-y-6"
    >
      <div
        class="flex flex-col sm:flex-row sm:items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="w-14 h-14 rounded-2xl bg-gradient-to-tr from-violet-600 to-indigo-500 flex items-center justify-center text-2xl font-bold text-white shadow-lg shadow-violet-500/20"
          >
            GP
          </div>
          <div>
            <div
              class="flex items-center gap-2.5 flex-wrap"
            >
              <h1
                class="text-xl sm:text-2xl font-bold text-white"
              >
                GPROFI...PRFL
              </h1>
              <span
                class="text-xs px-2.5 py-0.5 rounded-full border border-white/10 bg-white/5 text-zinc-400 font-mono"
              >
                testnet
              </span>
            </div>
            <div
              class="mt-1"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                  >
                    GPROFI...PRFL
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="relative inline-flex items-center"
          >
            <button
              aria-label="Copy Profile Link"
              class="inline-flex items-center gap-1.5 text-xs font-medium px-3 py-1.5 min-h-[44px] rounded-lg border transition-all border-white/10 bg-white/5 text-zinc-300 hover:border-white/20 hover:text-white hover:bg-white/10 "
              title="Copy Profile Link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4 shrink-0"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span>
                Copy Profile Link
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 pt-4 border-t border-white/5"
      >
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Outgoing
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            10.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as grantor
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Inbound
          </p>
          <p
            class="text-lg font-bold text-emerald-400"
          >
            0.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as beneficiary
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Active Streams
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            1
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            currently vesting
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex items-center justify-between gap-4 flex-wrap mb-6"
    >
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-violet-500/60 bg-violet-500/10 text-violet-300"
        >
          All Streams (1)
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Outgoing
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Incoming
        </button>
      </div>
      <div
        class="w-full sm:w-72"
      >
        <div
          class="relative flex flex-col sm:flex-row items-stretch sm:items-center gap-3 w-full "
        >
          <div
            class="relative flex-1"
          >
            <label
              class="sr-only"
              for="stream-search-filter"
            >
              Search and filter streams
            </label>
            <div
              class="absolute inset-y-0 left-0 pl-3.5 flex items-center pointer-events-none text-zinc-400"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <input
              aria-label="Filter streams"
              autocomplete="off"
              class="w-full pl-10 pr-10 py-2.5 bg-white/5 border border-white/10 rounded-xl text-sm text-white placeholder-zinc-500 focus:outline-none focus:border-violet-500 focus:ring-1 focus:ring-violet-500 transition-colors"
              id="stream-search-filter"
              placeholder="Filter streams by address or token…"
              role="searchbox"
              spellcheck="false"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="card p-5 flex flex-col gap-3"
        data-tour="schedule-card"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <div
              class="flex items-center gap-2"
            >
              <a
                class="text-sm font-semibold text-white hover:text-violet-300 transition-colors"
                href="/app/schedule/1"
              >
                Schedule #
                1
              </a>
              <button
                aria-label="Copy schedule 1"
                class="inline-flex items-center gap-1.5 rounded-md border px-2.5 py-1 text-[11px] font-medium transition-colors border-white/10 bg-white/5 text-zinc-400 hover:border-white/20 hover:text-white "
                title="Copy schedule 1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="13"
                    rx="2"
                    width="13"
                    x="9"
                    y="9"
                  />
                  <path
                    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                  />
                </svg>
                <span>
                  Copy
                </span>
              </button>
            </div>
            <div
              class="flex items-center gap-1.5 mt-0.5 flex-wrap"
            >
              <span
                class="text-[10px] font-semibold px-1.5 py-0.5 rounded bg-blue-500/10 text-blue-400 border border-blue-500/20"
              >
                Linear
              </span>
              <span
                class="text-[10px] font-medium px-1.5 py-0.5 rounded bg-zinc-700/40 text-zinc-400 border border-zinc-700/60"
              >
                revocable
              </span>
            </div>
          </div>
          <span
            class="text-xs font-medium px-2 py-0.5 rounded-full bg-violet-500/10 text-violet-400"
          >
            Vesting
          </span>
        </div>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 gap-2 text-xs text-zinc-400"
        >
          <div>
            <span
              class="text-zinc-600"
            >
              Grantor
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                >
                  GPRO...RFL
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Beneficiary
            </span>
            <div
              class="flex flex-col gap-1 mt-0.5"
            >
              <div
                class="flex items-center gap-2 flex-wrap"
              >
                <span
                  class="text-sm font-mono text-zinc-300 break-all"
                  title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                >
                  GCOU...PTY
                </span>
              </div>
            </div>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Total
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              10.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $1.20
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Claimed
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              0.0
               XLM
            </p>
            <p
              class="text-zinc-500 text-xs"
            >
              $0.00
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Starts
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2025
            </p>
          </div>
          <div>
            <span
              class="text-zinc-600"
            >
              Ends
            </span>
            <p
              class="text-zinc-300 mt-0.5"
            >
              Dec 2, 2026
            </p>
          </div>
        </div>
        <div>
          <div
            class="flex justify-between items-center text-xs text-zinc-500 mb-1.5"
          >
            <div
              class="flex items-center gap-3"
            >
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500"
                />
                Vested 
                8
                %
              </span>
              <span
                class="flex items-center gap-1"
              >
                <span
                  aria-hidden="true"
                  class="inline-block w-2 h-2 rounded-full bg-emerald-500"
                />
                Claimed 
                0
                %
              </span>
            </div>
            <span
              class="text-zinc-600"
            >
              10.0
               
              XLM
            </span>
          </div>
          <div
            aria-label="Vesting progress: 8% vested, 0% claimed"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="8"
            class="relative h-2.5 rounded-full bg-white/5 overflow-hidden"
            role="progressbar"
          >
            <div
              class="absolute inset-y-0 left-0 rounded-full bg-gradient-to-r from-violet-500 to-cyan-500 transition-all duration-700"
              style="width: 8%;"
            />
          </div>
        </div>
        <div>
          <button
            class="text-xs text-zinc-500 hover:text-zinc-300 transition-colors"
          >
            Show chart ▼
          </button>
        </div>
        <div
          class="flex flex-col sm:flex-row gap-2 mt-1"
        />
      </div>
    </div>
    <div
      class="mt-10 space-y-6"
    >
      <section
        class="card p-6"
      >
        <h2
          class="text-lg font-semibold text-white mb-4"
        >
          Splits configuration
        </h2>
        <p
          class="text-sm text-zinc-500"
        >
          No splits configured.
        </p>
      </section>
      <section
        class="card p-6"
      >
        <h2
          class="text-lg font-semibold text-white mb-4"
        >
          Drips activity
        </h2>
        <div
          class="space-y-3"
        >
          <div
            class="flex items-center justify-between gap-4 text-sm"
          >
            <span
              class="text-zinc-400"
            >
              Streaming to 
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GCOUNTERPARTYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACPTY"
                  >
                    GCOU...PTY
                  </span>
                </div>
              </div>
            </span>
            <span
              class="font-mono text-emerald-300"
            >
              0.0001
               
              XLM
              /s
            </span>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;

exports[`ProfileView snapshots > renders an empty profile > profile-empty 1`] = `
<div>
  <main
    class="max-w-5xl mx-auto px-4 sm:px-6 pt-24 sm:pt-28 pb-20"
  >
    <div
      class="card p-6 sm:p-8 mb-8 space-y-6"
    >
      <div
        class="flex flex-col sm:flex-row sm:items-center justify-between gap-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="w-14 h-14 rounded-2xl bg-gradient-to-tr from-violet-600 to-indigo-500 flex items-center justify-center text-2xl font-bold text-white shadow-lg shadow-violet-500/20"
          >
            GP
          </div>
          <div>
            <div
              class="flex items-center gap-2.5 flex-wrap"
            >
              <h1
                class="text-xl sm:text-2xl font-bold text-white"
              >
                GPROFI...PRFL
              </h1>
              <span
                class="text-xs px-2.5 py-0.5 rounded-full border border-white/10 bg-white/5 text-zinc-400 font-mono"
              >
                testnet
              </span>
            </div>
            <div
              class="mt-1"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2 flex-wrap"
                >
                  <span
                    class="text-sm font-mono text-zinc-300 break-all"
                    title="GPROFILEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPRFL"
                  >
                    GPROFI...PRFL
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="relative inline-flex items-center"
          >
            <button
              aria-label="Copy Profile Link"
              class="inline-flex items-center gap-1.5 text-xs font-medium px-3 py-1.5 min-h-[44px] rounded-lg border transition-all border-white/10 bg-white/5 text-zinc-300 hover:border-white/20 hover:text-white hover:bg-white/10 "
              title="Copy Profile Link"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4 shrink-0"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span>
                Copy Profile Link
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 pt-4 border-t border-white/5"
      >
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Outgoing
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            0.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as grantor
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Total Inbound
          </p>
          <p
            class="text-lg font-bold text-emerald-400"
          >
            0.0
             XLM
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            as beneficiary
          </p>
        </div>
        <div
          class="p-3 bg-white/3 rounded-xl border border-white/5"
        >
          <p
            class="text-xs text-zinc-400 uppercase tracking-wider mb-1"
          >
            Active Streams
          </p>
          <p
            class="text-lg font-bold text-white"
          >
            0
          </p>
          <p
            class="text-[11px] text-zinc-500"
          >
            currently vesting
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex items-center justify-between gap-4 flex-wrap mb-6"
    >
      <div
        class="flex gap-2"
      >
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-violet-500/60 bg-violet-500/10 text-violet-300"
        >
          All Streams (0)
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Outgoing
        </button>
        <button
          class="text-xs px-3.5 py-2 rounded-lg border font-medium transition-colors border-white/10 text-zinc-400 hover:text-white"
        >
          Incoming
        </button>
      </div>
      <div
        class="w-full sm:w-72"
      >
        <div
          class="relative flex flex-col sm:flex-row items-stretch sm:items-center gap-3 w-full "
        >
          <div
            class="relative flex-1"
          >
            <label
              class="sr-only"
              for="stream-search-filter"
            >
              Search and filter streams
            </label>
            <div
              class="absolute inset-y-0 left-0 pl-3.5 flex items-center pointer-events-none text-zinc-400"
            >
              <svg
                aria-hidden="true"
                class="h-4 w-4"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <input
              aria-label="Filter streams"
              autocomplete="off"
              class="w-full pl-10 pr-10 py-2.5 bg-white/5 border border-white/10 rounded-xl text-sm text-white placeholder-zinc-500 focus:outline-none focus:border-violet-500 focus:ring-1 focus:ring-violet-500 transition-colors"
              id="stream-search-filter"
              placeholder="Filter streams by address or token…"
              role="searchbox"
              spellcheck="false"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card p-16 text-center"
    >
      <div
        class="inline-flex items-center justify-center w-20 h-20 rounded-full bg-white/5 mb-6"
      >
        <span
          aria-label="No activity yet"
          class="text-4xl"
          role="img"
        >
          🌱
        </span>
      </div>
      <h3
        class="text-xl font-semibold text-white mb-2"
      >
        No activity yet
      </h3>
      <p
        class="text-zinc-400 max-w-md mx-auto mb-6"
      >
        This account has no vesting schedules, streams, splits, gives, or Drips lists.
      </p>
    </div>
  </main>
</div>
`;
